chore: resolve comments and format